[package]
name = "lelwel"
version = "0.10.2"
description = "Resilient LL(1) parser generator"
repository = "https://github.com/0x2a-42/lelwel"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"
keywords = ["parser", "generator", "LL", "grammar"]
categories = ["parsing"]
rust-version = "1.93"
[lints.rust]
rust-2018-idioms = { level = "deny" }

[dependencies]
logos = { git = "https://github.com/SmiteWindows/logos" }
codespan-reporting = { git = "https://github.com/SmiteWindows/codespan", branch = "master" }
codespan-lsp = { git = "https://github.com/SmiteWindows/codespan", branch = "master", optional = true }
ls-types = { git = "https://github.com/SmiteWindows/ls-types", optional = true }
lsp-server = { version = "0.7", optional = true }
clap = { version = "4.5", features = ["cargo"], optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
cli = ["clap"]
lsp = ["lsp-server", "codespan-lsp", "ls-types", "serde", "serde_json"]
wasm = ["wasm-bindgen"]

[[bin]]
name = "llw"
required-features = ["cli"]

[[bin]]
name = "lelwel-ls"
required-features = ["lsp"]

[lib]
crate-type = ["lib", "cdylib"]

[workspace]
members = [
  "examples/c",
  "examples/calc",
  "examples/json",
  "examples/l",
  "examples/lua",
  "examples/oberon0",
  "examples/python2",
  "examples/toml",
  "examples/wgsl",
  "examples/brainfuck",
]
